src/test/ui/const-generics/generic-sum-in-array-length.min.stderr
error: generic parameters must not be used inside of non-trivial constant values
  --> $DIR/generic-sum-in-array-length.rs:7:53
   |
LL | fn foo<const A: usize, const B: usize>(bar: [usize; A + B]) {}
   |                                                     ^ non-trivial anonymous constants must not depend on the parameter `A`
   |
   = help: it is currently only allowed to use either `A` or `{ A }` as generic constants

error: generic parameters must not be used inside of non-trivial constant values
  --> $DIR/generic-sum-in-array-length.rs:7:57
   |
LL | fn foo<const A: usize, const B: usize>(bar: [usize; A + B]) {}
   |                                                         ^ non-trivial anonymous constants must not depend on the parameter `B`
   |
   = help: it is currently only allowed to use either `B` or `{ B }` as generic constants

error: aborting due to 2 previous errors

